@@ -1,5 +1,5 @@
 /*---------------------------------------------------------------------------
- *	$Id: cm4_functions.h,v 1.3 2009-05-03 07:57:58 guru Exp $
+ *	$Id: cm4_functions.h,v 1.4 2009-05-03 23:05:02 guru Exp $
  *
  *
  *  File:	cm4_functions.h
@@ -15,9 +15,9 @@
  *-------------------------------------------------------------------------*/
 
 struct MGD77_CM4 {
-	struct C {	/*  */
+	struct L {	/*  */
 		int curr;
-	} C;
+	} L;
 	struct D {	/*  */
 		int active;
 		int index; 
